--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.0",
         "laravel/lumen-framework": "^9.0",
         "moontoast/math": "^1.2",
-        "ramsey/uuid": "^4.5"
+        "ramsey/uuid": "^4.5",
+        "spatie/laravel-medialibrary": "^10.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
