--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=lumen
+DB_USERNAME=lumen
 DB_PASSWORD=secret
 
-CACHE_DRIVER=file
+CACHE_DRIVER=memcached
 QUEUE_CONNECTION=sync
