--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     environment:
       SERVICE_NAME: teleconsultation
       SERVICE_TAGS: dev
-    working_dir: /var/www
+    working_dir: /var/www/teleconsultation
     volumes:
-      - ./:/var/www
+      - ./:/var/www/teleconsultation
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - backend
@@ -30,7 +30,7 @@ services:
       - "8002:80"
       - "443:443"
     volumes:
-      - ./:/var/www
+      - ./:/var/www/teleconsultation
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - backend
