--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "guzzlehttp/guzzle": "^7.5",
         "laravel/lumen-framework": "^9.0",
         "moontoast/math": "^1.2",
+        "owen-it/laravel-auditing": "^13.0",
         "ramsey/uuid": "^4.5",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
