--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": "^8.0",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.5",
+        "irazasyed/larasupport": "^1.1",
         "laravel/lumen-framework": "^9.0",
         "moontoast/math": "^1.2",
-        "owen-it/laravel-auditing": "^13.0",
+        "owen-it/laravel-auditing": "^13.5",
         "ramsey/uuid": "^4.5",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
